test/libhyperion/syntaxTests/types/bytes33.hyp
contract C {
  bytes65 b65 = 1;
}
// ----
// DeclarationError 7920: (15-22): Identifier not found or not unique.
